--- a/src/ZectranetBundle/Resources/views/sprint.html.twig
+++ b/src/ZectranetBundle/Resources/views/sprint.html.twig
@@ -67,6 +67,12 @@
         </div>
         {% include '@Zectranet/sprintDelete.html.twig' %}
 
+        <div class="col-xs-12" style="margin-bottom: 15px;">
+            <h3 class="pull-right text-muted">
+               Total estimation: [[ totalEstimation.h + 'h ' + totalEstimation.m + 'm']]
+            </h3>
+        </div>
+
         <!-- Begin of Tasks -->
         <div class="col-md-12">
             <div class="panel panel-default list-group">
