--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -24,6 +24,7 @@
         <link href="{{ asset('bundles/zectranet/css/angular-busy.css') }}" rel="stylesheet" type="text/css">
         <link href="{{ asset('bundles/zectranet/css/lightbox.css') }}" rel="stylesheet" type="text/css">
         <link href="{{ asset('bundles/zectranet/css/leftSidebar.css') }}" rel="stylesheet" type="text/css">
+        <link href="{{ asset('bundles/zectranet/css/Semantic/popup.css') }}" rel="stylesheet" type="text/css">
         <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     {% endblock %}
 
@@ -574,6 +575,7 @@
 	<script src="{{ asset('bundles/zectranet/js/moment.min.js') }}"></script>
     <script src="{{ asset('bundles/zectranet/js/text-redactor.js') }}"></script>
     <script src="{{ asset('bundles/zectranet/js/jquery.hotkeys.js') }}"></script>
+    <script src="{{ asset('bundles/zectranet/js/Semantic/popup.js') }}"></script>
     <script src="{{ asset('bundles/zectranet/js/google-code-prettify/prettify.js') }}"></script>
 
 	{#<script src="{{ asset('bundles/zectranet/js/custom/navigation.js') }}" type="text/javascript"></script>#}
