--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -26,7 +26,7 @@
         <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
         <style>
             [ng\:cloak], [ng-cloak], .ng-cloak {
-                display: hidden !important;
+                display: none !important;
             }
         </style>
     {% endblock %}
@@ -272,7 +272,7 @@
 
 						<a class="dropdown-toggle" data-toggle="dropdown" href="#">
 							<i class="fa fa-bell fa-fw"></i>
-                            <span ng-if="notifications.length > 0" style="position: absolute; top: 0; right: 14px; font-size: 15px; text-shadow: 0 0 15px #00c6ff;">[[notifications.length]]</span>
+                            <span ng-if="notifications.length > 0" ng-cloak style="position: absolute; top: 0; right: 14px; font-size: 15px; text-shadow: 0 0 15px #00c6ff;">[[notifications.length]]</span>
                             <i class="fa fa-caret-down"></i>
 						</a>
 
