--- a/src/ZectranetBundle/Resources/views/index.html.twig
+++ b/src/ZectranetBundle/Resources/views/index.html.twig
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block leftSidebar %}
-	<div class="navbar-default sidebar" role="navigation">
+	<div class="navbar-default sidebar" style="margin-top: 0;">
 		<div class="sidebar-nav navbar-collapse">
 			<div id="quicksearch-block" ng-controller="SearchController">
 				<ul class="nav">
