--- a/src/ZectranetBundle/Resources/views/QnAForum.html.twig
+++ b/src/ZectranetBundle/Resources/views/QnAForum.html.twig
@@ -45,29 +45,29 @@
                 </div>
             {% endif %}
 
-                <div class="col-md-2" style="font-size: 18px;">
-                    {% if forum.ownerID == app.user.id or (is_granted('ROLE_ADMIN')) %}
-                        <div class="pull-right">
-                            <div class="pull-right" data-toggle="tooltip" data-placement="top" title="Delete This Project">
-                                <a style="cursor: pointer; text-decoration: none;" data-toggle="modal" data-target="#delete_QnA_project">
-                                    <i class="fa text-danger fa-fw fa-trash"></i>
-                                </a>
-                            </div>
-
-                            <div class="pull-right" data-toggle="tooltip" data-placement="top" title="Project Settings">
-                                <a href="{{ path('zectranet_QnA_settings', {'project_id': forum.id}) }}" style="cursor: pointer; text-decoration: none;">
-                                    <i class="fa text-primary fa-fw fa-gear"></i>
-                                </a>
-                            </div>
-
-                            {#<div class="pull-right" data-toggle="tooltip" data-placement="top" title="Project Profile">
-                                <a href="{{ path('zectranet_project_profile_page', {'project_id': forum.id}) }}" style="cursor: pointer; text-decoration: none; font-size: 1.3em;">
-                                    Profile
-                                </a>
-                            </div>#}
+            <div class="col-md-2" style="font-size: 18px;">
+                {% if forum.ownerID == app.user.id or (is_granted('ROLE_ADMIN')) %}
+                    <div class="pull-right">
+                        <div class="pull-right" data-toggle="tooltip" data-placement="top" title="Delete This Forum">
+                            <a style="cursor: pointer; text-decoration: none;" data-toggle="modal" data-target="#delete_QnA_forum">
+                                <i class="fa text-danger fa-fw fa-trash"></i>
+                            </a>
                         </div>
-                    {% endif %}
-                </div>
+
+                        <div class="pull-right" data-toggle="tooltip" data-placement="top" title="Project Settings">
+                            <a href="{{ path('zectranet_QnA_settings', {'project_id': forum.id}) }}" style="cursor: pointer; text-decoration: none;">
+                                <i class="fa text-primary fa-fw fa-gear"></i>
+                            </a>
+                        </div>
+
+                        {#<div class="pull-right" data-toggle="tooltip" data-placement="top" title="Project Profile">
+                            <a href="{{ path('zectranet_project_profile_page', {'project_id': forum.id}) }}" style="cursor: pointer; text-decoration: none; font-size: 1.3em;">
+                                Profile
+                            </a>
+                        </div>#}
+                    </div>
+                    {% include 'ZectranetBundle::QnADelete.html.twig' %}
+                {% endif %}
             </div>
         </div>
     </div>
@@ -168,29 +168,4 @@
             </div>
         </div>
     </div>
-
-    <div class="modal fade" id="delete_QnA_project" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header label-danger">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title" id="myModalLabel" style="color: #f5f5f5;">
-                        Delete Project
-                    </h4>
-                </div>
-                <div class="modal-body">
-                    <div class="form-group">
-                        <div class="header">
-                            <h3 class="text-center">Are you really want to delete this project?</h3><br>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <a class="btn btn-danger" href="{{ path('zectranet_delete_QnA_forum', {'project_id': forum.id }) }}">Delete</a>
-                        <a class="btn btn-default" data-dismiss="modal" aria-hidden="true">Close</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
 {% endblock %}
