--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -36,7 +36,7 @@
 <body ng-cloak ng-controller="NavigationController" ng-init="getNotification()">
 
 <div id="wrapper" class="active">
-	<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+	<nav class="navbar navbar-default navbar-fixed-top" style="margin-bottom: 0">
 		{% block headNavigation %}
 			{% if app.user %}
 				<div class="navbar-header">
@@ -475,22 +475,21 @@
 				{% endif %}
 			</ul>
 		{% endblock %}
-
-
-		{% if app.user %}
-			{% block leftSidebar %}
-
-			{% endblock %}
-		{% endif %}
 	</nav>
 
+    {% if app.user %}
+        {% block leftSidebar %}
+
+        {% endblock %}
+    {% endif %}
+
 	{% block page %}
-	<div id="page-wrapper">
+	<div id="page-wrapper" style="height: 100%; margin-top: 50px;">
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-xs-12">
                     <!-- BEGIN OF SHOW REQUEST DETAILS MODAL -->
-                    <div class="modal fade" id="request_more_info" tabindex="-1">
+                    <div class="modal fade" id="request_more_info">
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header label-info">
