higthligth in all site

--- a/web/bundles/zectranet/css/search.css
+++ b/web/bundles/zectranet/css/search.css
@@ -3,10 +3,12 @@
     padding: 1px 3px;
     font-weight: bold;
     background-color: #fff34d;
+    color:#000000;
     -moz-border-radius: 6px;
     -webkit-border-radius: 6px;
     border-radius: 6px;
     -moz-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
     -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
+    word-wrap: normal !important;
 }
