--- a/src/ZectranetBundle/Resources/views/index.html.twig
+++ b/src/ZectranetBundle/Resources/views/index.html.twig
@@ -18,7 +18,7 @@
 								   class="form-control dropdown-toggle"
 								   placeholder="Search..."
 								   maxlength="50"
-								   ng-change="InputChange()"
+								   ng-change="InputChange(searchInput)"
 								   data-toggle="dropdown" type="search">
                                 <span class="input-group-btn">
                                     <a ng-href="{{ path('zectranet_user_page',{ 'user_id' : app.user.id }) }}SearchPage/[[searchInput]]" ng-click="PreCheck();" class="btn btn-default"  >
