--- a/src/ZectranetBundle/Resources/views/homeOffice.html.twig
+++ b/src/ZectranetBundle/Resources/views/homeOffice.html.twig
@@ -79,10 +79,15 @@
         <div class="col-md-4 col-md-offset-4">
             <ul class="list-group"  style="box-shadow: 2px 3px 6px 0 darkkhaki;">
                 <li class="list-group-item active" style="background:#ddedf4; color:#606060;">
-                    <b>Market Place</b>
+                    <b>Other</b>
                 </li>
                 <li class="list-group-item">
                     <a class="btn btn-default" href="{{ path('zectranet_public_market') }}">Market Place</a>
+                </li>
+                <li class="list-group-item">
+                    <a class="btn btn-default" href="{{ path('zectranet_show_office_archive', { 'office_id': office.id }) }}">
+                        Home Office Archive
+                    </a>
                 </li>
             </ul>
         </div>
