--- a/src/ZectranetBundle/Resources/views/projectDelete.html.twig
+++ b/src/ZectranetBundle/Resources/views/projectDelete.html.twig
@@ -4,13 +4,13 @@
             <div class="modal-header label-danger">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title" style="color: #f5f5f5;">
-                    Delete Forum
+                    Delete Project
                 </h4>
             </div>
             <div class="modal-body">
                 <div class="form-group">
                     <div class="header">
-                        <h3 class="text-center">Are you really want to delete this forum?</h3><br>
+                        <h3 class="text-center">Are you really want to delete this project?</h3><br>
                     </div>
                 </div>
                 <div class="form-group">
