--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -9,6 +9,10 @@
 
 	<title>{% block title %}Layout page{% endblock %}</title>
 
+    {% block AngularJS %}
+        <script src="{{ asset('bundles/zectranet/js/AngularJS/angular.js') }}" type="text/javascript"></script>
+    {% endblock %}
+
 	{% block styles %}
 		<link href="{{ asset('bundles/zectranet/css/bootstrap.css') }}" rel="stylesheet" type="text/css">
 		<link href="{{ asset('bundles/zectranet/css/font-awesome.css') }}" rel="stylesheet" type="text/css">
@@ -549,11 +553,9 @@
 {% block javascripts %}
 
 	<script src="{{ asset('bundles/zectranet/js/jquery-2.1.3.min.js') }}" type="text/javascript"></script>
-    
 	<script src="{{ asset('bundles/zectranet/js/underscore-min.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/Bootstrap/bootstrap.min.js') }}" type="text/javascript"></script>
 
-	<script src="{{ asset('bundles/zectranet/js/AngularJS/angular.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/AngularJS/angular-route.min.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/AngularJS/angular-sanitize.min.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/AngularJS/angular-animate.min.js') }}" type="text/javascript"></script>
@@ -576,11 +578,8 @@
     <script src="{{ asset('bundles/zectranet/js/jquery.hotkeys.js') }}"></script>
     <script src="{{ asset('bundles/zectranet/js/Semantic/popup.js') }}"></script>
     <script src="{{ asset('bundles/zectranet/js/google-code-prettify/prettify.js') }}"></script>
-
-	{#<script src="{{ asset('bundles/zectranet/js/custom/navigation.js') }}" type="text/javascript"></script>#}
-	{#<script src="{{ asset('bundles/zectranet/js/custom/CustomJavaScripts.js') }}"></script>#}
     <script type="text/javascript">
-    $('#editor').wysiwyg();
+        $('#editor').wysiwyg();
     </script>
 	<script type="text/javascript">
 		var JSON_URLS =
