--- a/src/ZectranetBundle/Resources/views/login.html.twig
+++ b/src/ZectranetBundle/Resources/views/login.html.twig
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block page %}
-	<div class="container">
+	<div class="container" style="height: 100%; margin-top: 50px;">
 		<div class="row">
 			<div class="col-md-12 col-xs-12">
 				<section id="login">
