--- a/src/ZectranetBundle/Resources/views/officeArchive.html.twig
+++ b/src/ZectranetBundle/Resources/views/officeArchive.html.twig
@@ -7,75 +7,162 @@
         <div class="page-header">
             <h3>Office Archive</h3>
         </div>
+        <div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <p>
+                        <span>Archived QnA Projects</span>
+                        <button class="pull-right btn btn-default" ng-click="getArchive();">
+                            <i class="fa fa-repeat"></i>
+                        </button>
+                        <span class="clearfix"></span>
+                    </p>
+                </div>
+                <div class="panel-body" cg-busy="officeArchivePromise">
+                    <!-- BEGIN OF QnA FORUM ARCHIVE -->
+                    <div class="row" ng-if="(!archives.QnAForums) || (archives.QnAForums.length == 0)">
+                        <div class="col-md-12">
+                            <h4 class="text-info" align="center">
+                                There is empty
+                            </h4>
+                        </div>
+                    </div>
+                    <div class="row" ng-if="(archives.QnAForums) && (archives.QnAForums.length > 0)">
+                        <div class="col-md-12">
+                            <table class="table table-striped">
+                                <thead>
+                                <tr>
+                                    <th class="col-xs-1">#</th>
+                                    <th class="col-xs-9">Name</th>
+                                    <th class="col-xs-1"><div class="text-center">Restore</div></th>
+                                    <th class="col-xs-1"><div class="text-center">Delete</div></th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr ng-repeat="QnA in archives.QnAForums">
+                                    <td class="col-xs-1">[[ $index + 1 ]]</td>
+                                    <td class="col-xs-9">[[ QnA.name ]]</td>
+                                    <td class="col-xs-1">
+                                        <form action="[[ QnA.href ]]" method="post">
+                                            <input type="hidden" name="project_type" value="1" />
+                                            <button class="btn btn-default center-block" type="submit">
+                                                <i class="fa fa-upload"></i>
+                                            </button>
+                                        </form>
+                                    </td>
+                                    <td class="col-xs-1">
+                                        <button type="button" class="btn btn-default center-block"
+                                                ng-click="deleteFromArchive(QnA.id, 1, $index);">
+                                            <i class="fa fa-trash"></i>
+                                        </button>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <!-- END OF QnA FORUM ARCHIVE -->
+                </div>
 
-        <!-- BEGIN OF QnA FORUM ARCHIVE -->
-        <div class="row">
-            <div class="col-md-12">
-                <table class="table table-striped">
-                    <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Name</th>
-                        <th>Func</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr ng-repeat="QnA in archives.QnAForums">
-                        <td>[[ $index + 1 ]]</td>
-                        <td>[[ QnA.name ]]</td>
-                        <td>TEMPLATE</td>
-                    </tr>
-                    </tbody>
-                </table>
+                <div class="panel-heading">
+                    Archived Header Forums
+                </div>
+                <div class="panel-body" cg-busy="officeArchivePromise">
+                    <!-- BEGIN OF HEADER FORUM ARCHIVE -->
+                    <div class="row" ng-if="(!archives.hfForums) || (archives.hfForums.length == 0)">
+                        <div class="col-md-12">
+                            <h4 class="text-info" align="center">
+                                There is empty
+                            </h4>
+                        </div>
+                    </div>
+                    <div class="row" ng-if="(archives.hfForums) && (archives.hfForums.length > 0)">
+                        <div class="col-md-12">
+                            <table class="table table-striped">
+                                <thead>
+                                <tr>
+                                    <th class="col-xs-1">#</th>
+                                    <th class="col-xs-9">Name</th>
+                                    <th class="col-xs-1"><div class="text-center">Restore</div></th>
+                                    <th class="col-xs-1"><div class="text-center">Delete</div></th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr ng-repeat="hf in archives.hfForums">
+                                    <td class="col-xs-1">[[ $index + 1 ]]</td>
+                                    <td class="col-xs-9">[[ hf.name ]]</td>
+                                    <td class="col-xs-1">
+                                        <form action="[[ hf.href ]]" method="post">
+                                            <input type="hidden" name="project_type" value="2" />
+                                            <button class="btn btn-default center-block" type="submit">
+                                                <i class="fa fa-upload"></i>
+                                            </button>
+                                        </form>
+                                    </td>
+                                    <td class="col-xs-1">
+                                        <button type="button" class="btn btn-default center-block"
+                                                ng-click="deleteFromArchive(hf.id, 2, $index);">
+                                            <i class="fa fa-trash"></i>
+                                        </button>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <!-- END OF HEADER FORUM ARCHIVE -->
+                </div>
+
+                <div class="panel-heading">
+                    Archived Development Projects
+                </div>
+                <div class="panel-body" cg-busy="officeArchivePromise">
+                    <!-- BEGIN OF DEVELOPMENT TEMPLATE ARCHIVE -->
+                    <div class="row" ng-if="(!archives.projects) || (archives.projects.length == 0)">
+                        <div class="col-md-12">
+                            <h4 class="text-info" align="center">
+                                There is empty
+                            </h4>
+                        </div>
+                    </div>
+                    <div class="row" ng-if="(archives.projects) && (archives.projects.length > 0)">
+                        <div class="col-md-12">
+                            <table class="table table-striped">
+                                <thead>
+                                <tr>
+                                    <th class="col-xs-1">#</th>
+                                    <th class="col-xs-9">Name</th>
+                                    <th class="col-xs-1"><div class="text-center">Restore</div></th>
+                                    <th class="col-xs-1"><div class="text-center">Delete</div></th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr ng-repeat="project in archives.projects">
+                                    <td class="col-xs-1">[[ $index + 1 ]]</td>
+                                    <td class="col-xs-9">[[ project.name ]]</td>
+                                    <td class="col-xs-1">
+                                        <form action="[[ project.href ]]" method="post">
+                                            <input type="hidden" name="project_type" value="4" />
+                                            <button class="btn btn-default center-block" type="submit">
+                                                <i class="fa fa-upload"></i>
+                                            </button>
+                                        </form>
+                                    </td>
+                                    <td class="col-xs-1">
+                                        <button type="button" class="btn btn-default center-block"
+                                                ng-click="deleteFromArchive(project.id, 4, $index);">
+                                            <i class="fa fa-trash"></i>
+                                        </button>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <!-- END OF DEVELOPMENT TEMPLATE ARCHIVE -->
+                </div>
             </div>
         </div>
-        <!-- END OF QnA FORUM ARCHIVE -->
-
-        <!-- BEGIN OF HEADER FORUM ARCHIVE -->
-        <div class="row">
-            <div class="col-md-12">
-                <table class="table table-striped">
-                    <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Name</th>
-                        <th>Func</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr ng-repeat="hf in archives.hfForums">
-                        <td>[[ $index + 1 ]]</td>
-                        <td>[[ hf.name ]]</td>
-                        <td>TEMPLATE</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <!-- END OF HEADER FORUM ARCHIVE -->
-
-        <!-- BEGIN OF DEVELOPMENT TEMPLATE ARCHIVE -->
-        <div class="row">
-            <div class="col-md-12">
-                <table class="table table-striped">
-                    <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Name</th>
-                        <th>Func</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr ng-repeat="project in archives.projects">
-                        <td>[[ $index + 1 ]]</td>
-                        <td>[[ project.name ]]</td>
-                        <td>TEMPLATE</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <!-- END OF DEVELOPMENT TEMPLATE ARCHIVE -->
     </div>
 {% endblock %}
 
@@ -83,8 +170,8 @@
     {{ parent() }}
     <script>
         JSON_URLS.getOfficeArchive = "{{ path('zectranet_get_office_archive', { 'office_id': office.id }) }}";
-        JSON_URLS.restoreFromArchive = "";
-        JSON_URLS.deleteFromArchive = "";
+        JSON_URLS.restoreFromArchive = "{{ path('zectranet_restore_project_from_archive', { 'office_id': office.id, 'project_id': 'project_id' }) }}";
+        JSON_URLS.deleteFromArchive = "{{ path('zectranet_delete_project_from_archive', { 'office_id': office.id, 'project_id': 'project_id' }) }}";
     </script>
     <script src="{{ asset('bundles/zectranet/js/custom/officeArchiveController.js') }}"></script>
 {% endblock %}
