--- a/src/ZectranetBundle/Resources/views/register.html.twig
+++ b/src/ZectranetBundle/Resources/views/register.html.twig
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block page %}
-	<div class="container">
+	<div class="container" style="height: 100%; margin-top: 50px;">
 		<div class="row text-center pad-top ">
 			<div class="col-md-12">
 				<h2 style="color:gray;">Registration</h2>
