--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -585,6 +585,7 @@
 		var JSON_URLS =
 		{
 			asset: "{{ asset('') }}",
+			miniSearch: "{{ path('zectranet_quick_search') }}",
 			notificationsGet: "{{ url('zectranet_notifications_get') }}",
             homeOfficeShow: "{{ url('zectranet_show_office', {'office_id': 0, 'conversation_id': 'conv_id'}) }}",
             officeShow: "{{ url('zectranet_show_office', {'office_id': 0}) }}",
