--- a/src/ZectranetBundle/Resources/views/officeArchive.html.twig
+++ b/src/ZectranetBundle/Resources/views/officeArchive.html.twig
@@ -12,7 +12,11 @@
                 <div class="panel-heading">
                     <p>
                         <span>Archived QnA Projects</span>
-                        <button class="pull-right btn btn-default" ng-click="getArchive();">
+                        <button class="pull-right btn btn-default"
+                                data-toggle="tooltip"
+                                data-placement="top"
+                                title="Reload archive"
+                                ng-click="getArchive();">
                             <i class="fa fa-repeat"></i>
                         </button>
                         <span class="clearfix"></span>
